--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fake-user-data-generator_dev
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fake-user-data-generator_dev
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
